; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_fotg210-hcd.c_fill_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_fotg210-hcd.c_fill_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.debug_buffer = type { {}*, i32, i64, i32 }

@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.debug_buffer*)* @fill_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fill_buffer(%struct.debug_buffer* %0) #0 {
  %2 = alloca %struct.debug_buffer*, align 8
  %3 = alloca i32, align 4
  store %struct.debug_buffer* %0, %struct.debug_buffer** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %5 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %15, label %8

8:                                                ; preds = %1
  %9 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %10 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 8
  %12 = call i64 @vmalloc(i32 %11)
  %13 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %14 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %13, i32 0, i32 2
  store i64 %12, i64* %14, align 8
  br label %15

15:                                               ; preds = %8, %1
  %16 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %17 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %37

23:                                               ; preds = %15
  %24 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %25 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %24, i32 0, i32 0
  %26 = bitcast {}** %25 to i32 (%struct.debug_buffer*)**
  %27 = load i32 (%struct.debug_buffer*)*, i32 (%struct.debug_buffer*)** %26, align 8
  %28 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %29 = call i32 %27(%struct.debug_buffer* %28)
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %3, align 4
  %31 = icmp sge i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %23
  %33 = load i32, i32* %3, align 4
  %34 = load %struct.debug_buffer*, %struct.debug_buffer** %2, align 8
  %35 = getelementptr inbounds %struct.debug_buffer, %struct.debug_buffer* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 8
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %32, %23
  br label %37

37:                                               ; preds = %36, %20
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i64 @vmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
